[build-system]
requires = ["Cython>=3.0", "pip>=23.0", "setuptools>=61.0", "wheel", "numpy==1.23.3"]

[project]
description = "Pixi-based Transic Envs"
name = "pixi-transic-envs"
requires-python = ">=3.10,<3.11"
version = "0.1.0"
dependencies = [
    "isaacsim>=4.2.0,<4.3",
    "isaacsim-extscache-kit>=4.2.0,<4.3",
    "isaacsim-extscache-kit-sdk>=4.2.0,<4.3",
    "isaacsim-extscache-physics>=4.2.0,<4.3",
]

[system-requirements]
cuda = "12.1"

[tool.pixi.project]
channels = ["pytorch", "nvidia", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
libc = { family="glibc", version="2.35" }

[tool.pixi.dependencies]
pip = ">=23.0"
pre-commit = ">=4.0.1,<5"
ruff = ">=0.7.2,<0.8"
cython = ">=3.0.11,<4"
setuptools = ">=75.3.0,<76"
wandb = ">=0.18.5,<0.19"

# match the pytorch to isaaclab
pytorch = "2.4.0"
pytorch-cuda = "12.1"

# required by transic envs
numpy = "<2.0"
numba = ">=0.59,<0.60"
gymnasium = "<1.0"
casadi = ">=3.6.7,<4"
urdf-parser-py = ">=0.0.4,<0.0.5"
roboticstoolbox-python = ">=1.1.1,<2"


[tool.pixi.tasks]
test_torch = "python -c 'import torch; print(torch.cuda.is_available())'"
isaacsim = "isaacsim omni.isaac.sim.python.kit"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
